tests/ui/weird_edge_cases/let_decl_in_parentheses copy.stderr
error: `let` cannot occur within expression
 --> tests/ui/weird_edge_cases/let_decl_in_parentheses copy.rs:4:10
  |
4 |         (let foo = 3) + 3
  |          ^^^
