tests/ui/weird_edge_cases/let_decl_in_parentheses copy.rs
use metamatch::eval;
fn main() {
    eval! {
        (let foo = 3) + 3
    }
}
